--- a/package.json
+++ b/package.json
@@ -6,17 +6,35 @@
     "@testing-library/jest-dom": "^5.11.6",
     "@testing-library/react": "^11.2.2",
     "@testing-library/user-event": "^12.2.2",
+    "axios": "^0.21.0",
+    "concurrently": "^5.3.0",
+    "electron": "^11.0.3",
+    "electron-builder": "^22.9.1",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
+    "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.1",
+    "serve": "^11.3.2",
+    "sweetalert2": "^10.10.4",
+    "typescript": "^4.1.2",
+    "wait-on": "^5.2.0",
     "web-vitals": "^0.2.4"
   },
-  "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
+  "resolutions": {
+    "react-dev-utils": "^10.2.1"
   },
+  "scripts": {
+    "react-start": "react-scripts start",
+      "react-build": "react-scripts build",
+      "react-test": "react-scripts test --env=jsdom",
+      "react-eject": "react-scripts eject",
+      "electron-build": "electron-builder -m",
+      "release": "react-build && electron-builder --publish=always",
+      "build": "react-build && electron-build",
+      "start": "concurrently \"cross-env BROWSER=none npm run react-start\" \"wait-on http://localhost:3000 && electron .\""
+  },
+  "main": "public/electron.js",
+  "homepage": "./",
   "eslintConfig": {
     "extends": [
       "react-app",
@@ -34,5 +52,9 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "cross-env": "^7.0.2",
+    "electron-is-dev": "^1.2.0"
   }
 }
